# xcbsync

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  unagi.pc
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
conf/: core.conf  plugin_expose.conf
doc/: Makefile  Makefile.am  Makefile.in
include/: Makefile  Makefile.am  Makefile.in  atoms.h  config.h  dbus.h  display.h  event.h  key.h  plugin.h  plugin_common.h  rendering.h  structs.h  system.h  util.h  vsync.h  window.h
plugins/: Makefile  Makefile.am  Makefile.in  expose.c  expose.la  expose_la-expose.lo  opacity.c  opacity.la  opacity_la-opacity.lo
plugins/.deps/: expose_la-expose.Plo  opacity_la-opacity.Plo
plugins/.libs/: expose.la  expose.lai  opacity.lai
rendering/: Makefile  Makefile.am  Makefile.in  render.c  render.la  render_la-render.lo
rendering/.deps/: render_la-render.Plo
rendering/.libs/: render.la  render.lai
src/: Makefile  Makefile.am  Makefile.in  atoms.c  dbus.c  display.c  event.c  key.c  plugin.c  plugin_common.c  rendering.c  unagi  unagi-client  unagi.c  util.c  vsync.c  window.c
src/.deps/: atoms.Po  dbus.Po  display.Po  event.Po  key.Po  plugin.Po  plugin_common.Po  rendering.Po  unagi.Po  util.Po  window.Po
